Fixed spacing.

--- a/public/style.css
+++ b/public/style.css
@@ -109,7 +109,8 @@ background-position:center;
 font-size:11px;
 font-weight:bold;
 color:#FBFDFB;
-
+margin-left:13px;
+margin-right:13px;
 
 }
 
